--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "api for artseen nyc",
   "main": "server.js",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
+    "express-session": "^1.15.3",
+    "moment": "^2.18.1",
     "mongoose": "^4.11.1",
     "morgan": "^1.8.2",
     "passport": "^0.3.2",
-    "passport-http": "^0.3.0",
-    "uuid": "^3.1.0"
+    "passport-http": "^0.3.0"
   },
   "devDependencies": {
     "chai": "^4.0.2",
