--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "api for artseen nyc",
   "main": "server.js",
   "dependencies": {
+    "axios": "^0.16.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.2",
     "cors": "^2.8.3",
@@ -13,7 +14,8 @@
     "mongoose": "^4.11.1",
     "morgan": "^1.8.2",
     "passport": "^0.3.2",
-    "passport-http": "^0.3.0"
+    "passport-http": "^0.3.0",
+    "xml2js": "^0.4.17"
   },
   "devDependencies": {
     "chai": "^4.0.2",
